tests/NormalTests/paczka1/fuzzy1/56735495.err
Error in line 4: H8TZ A612 20,3
Error in line 12: ugZD4GCIDR S242 18,1
Error in line 17: ugZD4GCIDR S724 5,1
Error in line 21: ugZD4GCIDR S729 0,8
Error in line 22: ugZD4GCIDR A612 3,0
Error in line 31: ugZD4GCIDR S729 59,2
Error in line 34: H8TZ S724 68,6
